--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.mcxiaoke.volley:library:1.0.6@aar'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile('com.facebook.fresco:fresco:0.9.0+') {
+        exclude group: 'com.parse.bolts', module: 'bolts-android';
+    }
 }
